Fix addButton overlap with table

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -158,14 +158,13 @@ body {
   margin-right: 15px;
   margin-top: 20px;
 }
-.add-button {
-  left: 52px;
-  margin: 20px;
-  position: absolute;
-}
+
 .table {
   text-align: center;
 }
-.th {
+.table-title {
   text-align: center;
+}
+.th {
+	text-align: center;
 }
